# hse_cpp_1_year_project

./: .gitignore  CMakeLists.txt  README.md
GPT/: CMakeLists.txt
GPT/cpp_gpt/: main.cpp
GPT/cpp_gpt/src/: gpt.h  gpt_components.h  tokenizer.h
GPT/dataset/: dataset_stat_A.json  dataset_stat_B.json  dataset_stat_C.json  dataset_stat_D.json  dataset_stat_E.json  dataset_stat_F.json  dataset_stat_total.json
cpp_gpt/: main.cpp
cpp_gpt/src/: gpt.h  main.cpp
hseqt/: .gitignore  CMakeLists.txt  authwindow.cpp  authwindow.h  authwindow.ui  gpt.h  gpt_components.h  griddelete.h  history.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  registrationwindow.cpp  registrationwindow.h  registrationwindow.ui  tokenizer.h  usersdb.h
